--- a/Shared/Components/ReplyCard.razor
+++ b/Shared/Components/ReplyCard.razor
@@ -9,7 +9,9 @@
 <div class="post-container">
     <div class="post-title">
         <div class="user-card">
-            <img class="profile-image" src="@userInfo?.ProfileImage" referrerpolicy="no-referrer">
+            <div class="profile-image">
+                <img src="@userInfo?.ProfileImage" referrerpolicy="no-referrer">
+            </div>
             <p class="detail-text">@userInfo?.Username</p>
         </div>
         <div class="content-column">
