--- a/Pages/Profile.razor
+++ b/Pages/Profile.razor
@@ -26,8 +26,12 @@
                 <DataAnnotationsValidator />
                 <div class="form-column">
                     <div class="form-row">
-                        <label class="file-input-label" for="image-selector"><div class="profile-page-picture"><img class="scale-picture"
-                            src="@imgUrl" alt="profile-picture"></div></label>
+                        <label class="file-input-label" for="image-selector">
+                            <div class="profile-page-picture">
+                                <img
+                            src="@imgUrl" alt="profile-picture">
+                            </div>
+                        </label>
                         <InputFile accept=".jpg,.jpeg,.png" OnChange="OnNewImage" id="image-selector" class="file-input-hidden"></InputFile>
                         <div class="form-column mb-0 justify-content-center">
                             <p class="mr-3">Username:</p>
@@ -75,7 +79,7 @@
             if(authenticationState.User.Identity!.IsAuthenticated)
                 {
                     await userService.GetDataIfExistingUser(authenticationState.User.Claims.Where(c => c.Type == ClaimTypes.Email).First().Value, firestoreDb);
-                    
+                    userSettings.EnableNotifications = userService.User!.EnableNotifications;
                     await InvokeAsync(() => StateHasChanged());
                 }
         } 
@@ -95,13 +99,14 @@
         
         if(userSettings.NewProfileImage != null && userSettings.NewProfileImage.Count() > 0) 
         {
-            if(userSettings.NewProfileImage[0].Size > 512000)
+            if(userSettings.NewProfileImage[0].Size > 5120000)
             {
                 imgUrl = "../images/cross.png";
             } else {
-                var buffers = new byte[userSettings.NewProfileImage[0].Size];
-                await userSettings.NewProfileImage[0].OpenReadStream().ReadAsync(buffers);
                 string imageType = userSettings.NewProfileImage[0].ContentType;
+                var resizedImage = await userSettings.NewProfileImage[0].RequestImageFileAsync(imageType, 200, 200);
+                var buffers = new byte[resizedImage.Size];
+                await resizedImage.OpenReadStream(buffers.Length).ReadAsync(buffers);
                 imgUrl =$"data:{imageType};base64,{Convert.ToBase64String(buffers)}";
             }
         } else {
