--- a/Shared/Components/PostCard.razor.css
+++ b/Shared/Components/PostCard.razor.css
@@ -13,11 +13,11 @@
 }
 
 .user-card {
-display: flex;
-flex-direction: column;
-justify-content: center;
-align-items: center;
-margin-bottom: 1rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 1rem;
 }
 
 .detail-card {
@@ -121,7 +121,7 @@ margin-bottom: 1rem;
 }
 
 .profile-image img {
-    max-width: 45px;
-    max-height: 45px;
-    margin: auto;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
