--- a/Shared/Components/ReplyCard.razor.css
+++ b/Shared/Components/ReplyCard.razor.css
@@ -13,12 +13,12 @@
 }
 
 .user-card {
-display: flex;
-flex-direction: column;
-justify-content: center;
-align-items: center;
-margin-bottom: 1rem;
-margin-right: 1rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 1rem;
+    margin-right: 1rem;
 }
 
 .detail-card {
@@ -87,9 +87,9 @@ margin-right: 1rem;
 }
 
 .profile-image img {
-    max-width: 45px;
-    max-height: 45px;
-    margin: auto;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 .like-container {
