--- a/Shared/MainLayout.razor.css
+++ b/Shared/MainLayout.razor.css
@@ -14,7 +14,8 @@ main {
     transform: scaleY(1);
     transform-origin: top;
     background-color: var(--toprowColor);
-    border: 1px solid #d6d5d5;
+    border: 0;
+    box-shadow: 3px 3px 4px 1px gray;
     width: 10rem;
     transition: transform 0.2s linear;
 }
@@ -51,11 +52,13 @@ main {
 .name-text {
     font-size: 14px;
     margin: 0;
+    color: var(--sidebarColor);
 }
 
 .user-icon {
     font-size: 30px;
     cursor: pointer;
+    color: var(--sidebarColor);
 }
 
 .user-icon:active {
@@ -91,9 +94,9 @@ main {
 }
 
 .profile-image img {
-    max-width: 30px;
-    max-height: 30px;
-    margin: auto;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 .top-row {
