--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -40,7 +40,8 @@
         }
     </Authorized>
     <NotAuthorized>
-        <p>not inloggad</p>
+        <h1>Hello!</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur pariatur, doloribus, officia excepturi tempore modi vel, veritatis animi expedita quidem dolorum vero aspernatur assumenda nulla voluptas placeat? Similique, cum illum!</p>
     </NotAuthorized>
 </AuthorizeView>
 
