--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -115,6 +115,8 @@ a:hover {
 
 .action-icon {
     cursor: pointer;
+    border: none;
+    background-color: var(--bodyBackgroundColor);
 }
 
 .action-icon:hover {
